--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="wrong_email_format_error">email format is not in right format</string>
     <string name="wrong_password_format_error">Password must contain minimum 8 characters, at least 1 Alphabet, 1 Number and 1 Special Character from [@#$%^+=!]</string>
     <string name="wrong_password_confirmation">password confirmation is not correct</string>
+    <string name="map_distance_label">distance is:</string>
+    <string name="map_distance_metric_label">distance metric</string>
 </resources>
